2007-04-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #3729: Roll-over (RO) on a GMENU in IE didn't work with xhtml_strict

2007-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: t3lib_BEfunc::getRecord() did not free recordset. This can cause memory leaks if persistent mysql connections are used

2007-04-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Made debug logging of user-supplied SQL queries possible in t3lib_db.

2007-04-04 Andreas Otto <andreas.otto@dkd.de>

	* Related to bug #4447: A directory handle was not correclty used.

2007-04-03  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1.1

2007-04-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #5088: Cache is not saved properly because of charset conflict in the database. Changing the field type of cache_hash.content from mediumtext to mediumblob. To make this work, you need to compare your database in the Install Tool.

2007-04-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4447: "Clear FE cache" doesn't clear "typo3temp/cache_pages" directory

2007-03-30  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5105: Extensions crash when using HTMLArea in FE (will be replaced with bugfix #5177 from Trunk end of April 2007)
	* Fixed bug #5248: IRRE - Element browser cannot be used on new child records of a new parent record

2007-03-30  Franz Holzinger  <kontakt@fholzinger.com>

	* Fixed bug #4725: EM: Include older versions when fetching data using searchExtensionsXML()

2007-03-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5288: Missing parameter in recursion of t3lib_div::array_merge_recursive_overrule (thanks to Simon Tuck)

2007-03-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Adding page tree backwards compatibility for JavaScript function hilight_row() to tree.js (by Benjamin Mack)

2007-03-28  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #5266: WamCom browser check in htmlarea.js conflicted with Firefox 2.0.0.3
